--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 			<version>1.2.1.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.sun.xml.ws</groupId>
+			<artifactId>jaxws-rt</artifactId>
+			<version>2.2.10</version>
+		</dependency>
 
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -116,6 +121,30 @@
 						<goals>
 							<goal>generate</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>jaxws-maven-plugin</artifactId>
+				<version>2.4.1</version>
+				<executions>
+					<execution>
+						<id>countriesaccessws</id>
+						<goals>
+							<goal>wsimport</goal>
+						</goals>
+						<configuration>
+							<wsdlDirectory>${basedir}/src/main/resources/wsdl</wsdlDirectory>
+							<wsdlFiles>
+								<wsdlFile>countries.xsd</wsdlFile>
+							</wsdlFiles>
+							<keep>true</keep>
+							<packageName>com.virtualbank.countries.ws.access</packageName>
+							<vmArgs>
+								<vmArg>-Djavax.xml.accessExternalSchema=all</vmArg>
+							</vmArgs>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
