--- a/.drone.yml
+++ b/.drone.yml
@@ -8,4 +8,4 @@ steps:
   - name: build
     image: maven:3.3.3-jdk-8-onbuild
     commands:
-      - mvnw package -DskipTests=false
+      - mvn package -DskipTests=false
