--- a/.drone.yml
+++ b/.drone.yml
@@ -2,7 +2,8 @@ kind: pipeline
 name: default
 
 workspace:
-  path: /src/github.com/sanjitverma/account
+  base: /account 
+  path: src/github.com/sanjitverma/account
 steps:
   - name: build
     image: maven:3.6.2-jdk-11-slim
