--- a/.drone.yml
+++ b/.drone.yml
@@ -2,8 +2,8 @@ kind: pipeline
 name: default
 
 workspace:
-  base: /account 
-  path: src/github.com/sanjitverma/account
+  base: /sanjitverma 
+  path: account
 steps:
   - name: build
     image: maven:3.6.2-jdk-11-slim
